chore: renamed automata to uiloos.
So long my friend automata, such a shame you were already taken...

--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -5,7 +5,7 @@
     <div class="md:flex md:items-center md:justify-between py-4 md:py-8 border-t border-gray-200">
 
       <!-- Copyrights note -->
-      <div class="text-sm text-gray-600 mr-4">&copy; 2022 Automata. All rights reserved.</div>
+      <div class="text-sm text-gray-600 mr-4">&copy; 2022 uiloos. All rights reserved.</div>
 
     </div>
 
