--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>{{ title or renderData.title}} | Automata</title>
+    <title>{{ title or renderData.title}} | uiloos</title>
     <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
   </head>
 
