--- a/packages/website/src/pages/api.njk
+++ b/packages/website/src/pages/api.njk
@@ -10,16 +10,16 @@ eleventyNavigation:
 <div class="text-lg text-gray-600">
   <h1 class="h1 text-gray-900 mb-4">API</h1>
   <p class="mb-4">
-    The Automata API is divided in several two parts: 
+    The uiloos API is divided in several two parts: 
   </p>
 
   <p class="mb-4">
     The first is the <a class="underline text-blue-500" href="core/">core</a>
-    which contains all automata's  which can be used in vanilla JavaScript.
+    which contains all classes which can be used in vanilla JavaScript.
   </p>
 
   <p class="mb-8">
-    The second part consists of packages which make using Automata easier in 
+    The second part consists of packages which make using uiloos easier in 
     various front-end frameworks by providings framework specific bindings.
     Currently there are bindings for:
   </p>
