--- a/packages/website/src/pages/api/_includes/macros.njk
+++ b/packages/website/src/pages/api/_includes/macros.njk
@@ -17,7 +17,7 @@
         <span class="border bg-red-400 font-medium text-white inline-block px-1 my-2 text-sm">C</span>
       {% elif def.kindString === 'Class' and def.decorators[0].type.name === 'NgModule' %}
         <span class="border bg-purple-400 font-medium text-white inline-block px-1 my-2 text-sm">M</span>
-      {% elif def.name === 'automataPlugin' %}
+      {% elif def.name === 'uiloosPlugin' %}
         <span class="border bg-purple-400 font-medium text-white inline-block px-1 my-2 text-sm">P</span>
       {% elif def.kindString === 'Class' %}
         <span class="border bg-blue-400 font-medium text-white inline-block px-1 my-2 text-sm">C</span>
