--- a/packages/website/src/pages/api/angular/angular.njk
+++ b/packages/website/src/pages/api/angular/angular.njk
@@ -9,7 +9,7 @@ permalink: /api/angular/
 <div class="text-lg text-gray-600">
   <h1 class="h1 text-gray-900 mb-4">Angular</h1>
 
-  <p class="mb-8">The Angular bindings for automata.</p>
+  <p class="mb-8">The Angular bindings for uiloos.</p>
 
   {{ displayApi(api.angular.children, 'angular') }}
 </div>
