--- a/packages/website/src/pages/api/core/core.njk
+++ b/packages/website/src/pages/api/core/core.njk
@@ -9,7 +9,7 @@ permalink: /api/core/
 <div class="text-lg text-gray-600">
   <h1 class="h1 text-gray-900 mb-4">Core</h1>
 
-  <p class="mb-8">The core of automata consists of pure JavaScript classes and functions.</p>
+  <p class="mb-8">The core of uiloos consists of pure JavaScript classes and functions.</p>
 
   {{ displayApi(api.core.children, 'core') }}
 
