--- a/packages/website/src/pages/api/react/react.njk
+++ b/packages/website/src/pages/api/react/react.njk
@@ -9,7 +9,7 @@ permalink: /api/react/
 <div class="text-lg text-gray-600">
   <h1 class="h1 text-gray-900 mb-4">React</h1>
 
-  <p class="mb-8">The React bindings for automata.</p>
+  <p class="mb-8">The React bindings for uiloos.</p>
 
   {{ displayApi(api.react.children, 'react') }}
 </div>
