--- a/packages/website/src/pages/api/vue/vue.njk
+++ b/packages/website/src/pages/api/vue/vue.njk
@@ -9,7 +9,7 @@ permalink: /api/vue/
 <div class="text-lg text-gray-600">
   <h1 class="h1 text-gray-900 mb-4">Vue</h1>
 
-  <p class="mb-8">The Vue bindings for automata.</p>
+  <p class="mb-8">The Vue bindings for uiloos.</p>
 
   {{ displayApi(api.vue.children, 'vue') }}
 </div>
