--- a/packages/website/src/pages/api/_includes/class.njk
+++ b/packages/website/src/pages/api/_includes/class.njk
@@ -34,7 +34,7 @@
 
   <h2 class="h2 mb-2" id="methods"><a href="#methods">Methods</a></h2>
   {% for item in def.children %}
-    {% if not item.flags.isPrivate and item.kindString === 'Method' %}
+    {% if not item.flags.isPrivate and item.kindString === 'Method' and not item.name.startsWith('_') %}
       {% include "./method.njk" %}
     {% endif %}
   {% endfor %}
