feat: added license key checking.
The `ActiveList` now calls the `_checkLicense` code in the constructor,
this way any use of the `ActiveList` will result in a license check.

Made the core package `sideEffects` free, so webpack can treeshake it
better.

All test in all other packages now set a fake license key, for testing
purposes.

The "website" core api generation now renders functions as well so the
`activateLicense` is shown.

Also renamed "Generic" to "generic".

Added `jest-watch-typeahead` so tests can be filtered. Also mocks are
now auto reset.

--- a/packages/website/src/pages/api/core/api-pages.njk
+++ b/packages/website/src/pages/api/core/api-pages.njk
@@ -14,6 +14,8 @@ renderData:
   {% include "../_includes/error.njk" %}
 {% elif def.kindString === 'Class' %}
   {% include "../_includes/class.njk" %}
+{% elif def.kindString === 'Function' %}
+  {% include "../_includes/function.njk" %}
 {% elif def.kindString === 'Type alias' %}
   {% include "../_includes/typealias.njk" %}
 {% endif %}
