--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -3,6 +3,9 @@
   <head>
     <title>{{ title or renderData.title}} | uiloos</title>
     <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
+
+    <link rel="icon" href="/images/favicon.png" sizes="any"><!-- 32×32 -->
+    <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
   </head>
 
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight">
