--- a/packages/website/src/pages/api/core/core.njk
+++ b/packages/website/src/pages/api/core/core.njk
@@ -6,7 +6,7 @@ permalink: /api/core/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">Core</h1>
 
   <p class="mb-8">The core of uiloos consists of pure JavaScript classes and functions.</p>
