--- a/packages/website/src/pages/api/react/_includes/component.njk
+++ b/packages/website/src/pages/api/react/_includes/component.njk
@@ -1,6 +1,6 @@
 {% from "../../_includes/macros.njk" import displaySignatures, displayType %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">
     {{def.name}}
 
