--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -1,12 +1,95 @@
 <footer>
   <div class="max-w-6xl mx-auto px-4 sm:px-6">
 
+    <!-- Top area: Blocks -->
+    <div class="grid sm:grid-cols-12 gap-8 py-8 md:py-12 border-t border-gray-200">
+
+      <!-- 1st block -->
+      <div class="flex justify-center sm:col-span-12 lg:col-span-3 place-items-center">
+        <!-- Logo -->
+        <img src="/images/uiloos-colored.svg" width="160" height="160" alt="uiloos logo" loading="lazy" />
+      </div>
+
+      <!-- 3rd block -->
+      <div class="sm:col-span-6 md:col-span-4 lg:col-span-3">
+        <h6 class="text-gray-800 font-medium mb-2">Resources</h6>
+        <ul class="text-sm">
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/docs">Documentation</a>
+          </li>
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/api">API</a>
+          </li>
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/blog">Blog</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- 4th block -->
+      <div class="sm:col-span-6 md:col-span-4 lg:col-span-3">
+        <h6 class="text-gray-800 font-medium mb-2">Company</h6>
+        <ul class="text-sm">
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="#0">Home</a>
+          </li>
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/pricing">Pricing</a>
+          </li>
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="https://dashboard.uiloos.dev/license">License</a>
+          </li>
+          <li class="mb-2">
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="https://dashboard.uiloos.dev/privacy">Privacy</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- 5th block -->
+      <div class="sm:col-span-6 md:col-span-4 lg:col-span-3">
+        <h6 class="text-gray-800 font-medium mb-2">Subscribe</h6>
+        <p class="text-sm text-gray-600 mb-4">Get the latest news and articles to your inbox</p>
+        <form>
+          <div class="flex flex-wrap mb-4">
+            <div class="w-full">
+              <label class="block text-sm sr-only" for="newsletter">Email</label>
+              <div class="relative flex items-center max-w-xs">
+                <input id="newsletter" type="email" class="form-input w-full text-gray-800 px-3 py-2 pr-12 text-sm" placeholder="Your email" required/>
+                <button type="submit" class="absolute inset-0 left-auto" aria-label="Subscribe">
+                  <span class="absolute inset-0 right-auto w-px -ml-px my-2 bg-gray-300" aria-hidden="true"></span>
+                  <svg class="w-3 h-3 fill-current text-blue-600 mx-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.707 5.293L7 .586 5.586 2l3 3H0v2h8.586l-3 3L7 11.414l4.707-4.707a1 1 0 000-1.414z" fill-rule="nonzero"/>
+                  </svg>
+                </button>
+              </div>
+              <!-- Success message -->
+              <!-- <p class="mt-2 text-green-600 text-sm">Thanks for subscribing!</p> -->
+            </div>
+          </div>
+        </form>
+      </div>
+
+    </div>
+
     <!-- Bottom area -->
     <div class="md:flex md:items-center md:justify-between py-4 md:py-8 border-t border-gray-200">
 
-      <!-- Copyrights note -->
-      <div class="text-sm text-gray-600 mr-4">&copy; 2022 uiloos. All rights reserved.</div>
+      <!-- Social links -->
+      <ul class="flex mb-4 md:order-1 md:ml-4 md:mb-0">
+        <li>
+          <a class="flex justify-center items-center text-gray-600 hover:text-gray-900 bg-white hover:bg-white-100 rounded-full shadow transition duration-150 ease-in-out" href="https://twitter.com/uiloosdev" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+            <svg class="w-8 h-8 fill-current" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+              <path d="M24 11.5c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4 0 1.6 1.1 2.9 2.6 3.2-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H8c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4c.7-.5 1.3-1.1 1.7-1.8z"/>
+            </svg>
+          </a>
+        </li>
+      </ul>
 
+      <div class="flex sm:justify-between">
+        <div class="text-sm text-gray-600 mr-4">&copy; 2022 uiloos. All rights reserved.</div>
+
+        <div class="text-sm text-gray-600">KVK: 83561420</div>
+      </div>
     </div>
 
   </div>
