--- a/packages/website/src/pages/api/_includes/function.njk
+++ b/packages/website/src/pages/api/_includes/function.njk
@@ -1,6 +1,6 @@
 {% from "./macros.njk" import displayType, displaySignatures %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">
     {{def.name}}
 
