--- a/packages/website/src/pages/api/_includes/typealias.njk
+++ b/packages/website/src/pages/api/_includes/typealias.njk
@@ -32,7 +32,7 @@
   {% endfor %}
 {% endmacro %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">{{def.name}}
 
     {% if def.typeParameter.length > 0 %}
