--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -4,10 +4,10 @@ layout: layouts/api.njk
 permalink: /api/
 eleventyNavigation:
   key: API
-  order: 0
+  order: 1
 ---
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">API</h1>
   <p class="mb-4">
     The uiloos API is divided in several two parts: 
