--- a/packages/website/src/pages/api/vue/vue.njk
+++ b/packages/website/src/pages/api/vue/vue.njk
@@ -6,7 +6,7 @@ permalink: /api/vue/
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">Vue</h1>
 
   <p class="mb-8">The Vue bindings for uiloos.</p>
