feat: added website skeleton.
Added basic pricing and home page, which are not yet finalized. Also
added a footer, and letters to various types of visitors.

Minor changes:

1. All fonts are now inside of the website itself and not on a google
   font CDN.

2. Tailwind now scans /scripts as well for class names.

3. Added uiloos logo, and favicon.

4. Removed any grayish text as they are quickly unreadable.

5. Appended "uiloos" to the title on every page.

--- a/packages/website/src/pages/api/angular/angular.njk
+++ b/packages/website/src/pages/api/angular/angular.njk
@@ -1,12 +1,12 @@
 ---
-title: Angular | API
+title: Angular | API | uiloos
 layout: layouts/api.njk
 permalink: /api/angular/
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">Angular</h1>
 
   <p class="mb-8">The Angular bindings for uiloos.</p>
