--- a/packages/website/src/pages/api/angular/api-pages.njk
+++ b/packages/website/src/pages/api/angular/api-pages.njk
@@ -6,7 +6,7 @@ pagination:
     size: 1
     alias: def
 renderData:
-    title: "{{ def.name }} | Angular | API"
+    title: "{{ def.name }} | Angular | API | uiloos"
     stickyNavigation: false
 ---
 
