--- a/packages/website/src/pages/api/react/react.njk
+++ b/packages/website/src/pages/api/react/react.njk
@@ -1,12 +1,12 @@
 ---
-title: React | API
+title: React | API | uiloos
 layout: layouts/api.njk
 permalink: /api/react/
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">React</h1>
 
   <p class="mb-8">The React bindings for uiloos.</p>
