--- a/packages/website/src/pages/api/vue/vue.njk
+++ b/packages/website/src/pages/api/vue/vue.njk
@@ -1,12 +1,12 @@
 ---
-title: Vue | API
+title: Vue | API | uiloos
 layout: layouts/api.njk
 permalink: /api/vue/
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
 
-<div class="text-lg text-gray-600">
+<div class="text-lg">
   <h1 class="h1 text-gray-900 mb-4">Vue</h1>
 
   <p class="mb-8">The Vue bindings for uiloos.</p>
